--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px
 }
 
 .logo {
@@ -8,18 +12,27 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  /* padding: 8px 8px; */
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  /* background-color: red; */
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  justify-content:space-between;  /* display: inline-block; */
+  
+
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 8px;
+  /* padding: 8px; */
+  margin: 10px;
+  text-align: center;
   /* this removes the line under the links */
   text-decoration: none;
 }
