--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,14 +12,27 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px
 }
 
+.left {
+  display: flex;
+  justify-content: space-between;
+}
+
+.right {
+  display: flex;
+  justify-content: space-between;
+}
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left: 16px
 }
 
 .logo {
@@ -27,6 +40,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  /* margin-right: 16px; */
+  /* background-color: red; */
 }
 
 button {
@@ -35,14 +50,21 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-right: 16px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 16px;
+  text-align: center;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content:center;
+  /* background-color: red; */
+  padding: 0px
 }
